# arrow

./: .travis.yml
.github/workflows/: cpp.yml  crash_repro.yml  dev.yml  matlab.yml  release.yml  release_candidate.yml
c_glib/test/: run-test.sh
ci/: detect-changes.py  travis_before_script_matlab.sh  travis_env_common.sh  travis_script_matlab.sh
ci/conan/: merge_upstream.sh
ci/scripts/: crash_repro.sh  install_minio.sh  matlab_build.sh  msys2_setup.sh
cpp/build-support/: vendor-flatbuffers.sh
cpp/src/arrow/: pretty_print.cc  pretty_print.h
cpp/src/arrow/io/: file.cc
cpp/src/arrow/ipc/: CMakeLists.txt  feather.cc  feather_v1_test.cc
cpp/src/parquet/: column_writer-test.cc  column_writer.cc
cpp/src/parquet/arrow/: record_reader.cc
crash-repro/: CMakeLists.txt  main.cc
dev/: merge_arrow_pr.sh
dev/archery/: generate_files_for_endian_test.sh  setup.py
dev/conbench_envs/: hooks.sh
dev/release/: 05-binary-upload.sh  07-matlab-upload.sh  Rakefile  post-06-csharp.sh  utils-create-release-tarball.sh
dev/release/github/: prerelease.sh  release.sh
docs/: Makefile
docs/source/developers/: release.rst
go/arrow/: Makefile
java/: pom.xml
java/algorithm/: pom.xml
java/c/: pom.xml
java/compression/: pom.xml
java/dataset/: pom.xml
java/flight/: pom.xml
java/format/: pom.xml
java/gandiva/: pom.xml
java/memory/: pom.xml
java/performance/: pom.xml
java/tools/: pom.xml
java/vector/: pom.xml
js/: npm-release.sh  package.json
matlab/: CMakeLists.txt  INSTALL.md  README.md  test.m
matlab/build_support/: common_vars.m  compile.m  test.m
matlab/ci/: build.m  compile.m  env.m  test.m
matlab/example/: README.md  array.md  feather.md  field.md  record_batch.md  schema.md  type.md
matlab/src/cpp/arrow/matlab/: formatting.cc
matlab/src/cpp/arrow/matlab/array/proxy/: array.cc  list_array.cc
matlab/src/cpp/arrow/matlab/c/proxy/: array_c_struct.cc  array_c_struct.h  array_importer.cc  array_importer.h  record_batch_importer.cc  record_batch_importer.h  schema_c_struct.cc  schema_c_struct.h
matlab/src/cpp/arrow/matlab/error/: error.h
matlab/src/cpp/arrow/matlab/io/ipc/proxy/: record_batch_file_reader.cc  record_batch_file_reader.h  record_batch_file_writer.cc  record_batch_file_writer.h
matlab/src/cpp/arrow/matlab/proxy/: factory.cc  wrap.cc
matlab/src/cpp/arrow/matlab/tabular/proxy/: record_batch.cc  record_batch.h  table.cc
matlab/src/matlab/+arrow/+array/: Array.m
matlab/src/matlab/+arrow/+c/: ArrayCStruct.m  SchemaCStruct.m  export.m  import.m  mlarrow2pyarrow.m  pyarrow2mlarrow.m
matlab/src/matlab/+arrow/+c/+internal/: ArrayImporter.m  FFIWrapper.py  RecordBatchImporter.m
matlab/src/matlab/+arrow/+io/+ipc/: RecordBatchFileReader.m  RecordBatchFileWriter.m
matlab/src/matlab/+arrow/+tabular/: RecordBatch.m
matlab/test/: tdummytest.m  tfeather.m
matlab/test/arrow/array/: AbstractTestCasesForIndexing.m  tBooleanArray.m  tDate32Array.m  tDate64Array.m  tFloat32Array.m  tFloat64Array.m  tInt16Array.m  tInt32Array.m  tInt64Array.m  tInt8Array.m  tStringArray.m  tTime32Array.m  tTime64Array.m  tTimestampArray.m  tUInt16Array.m  tUInt32Array.m  tUInt64Array.m  tUInt8Array.m
matlab/test/arrow/tabular/: hTabular.m  tRecordBatchRefactor.m  tTableRefactor.m
matlab/test/arrow/tabular/refactor/: hTabular.m  tRecordBatch.m  tTable.m
matlab/tools/: packageMatlabInterface.m
matlab/tools/cmake/: BuildMatlabArrowInterface.cmake  MatlabConfig.cmake
python/: asv-build.sh  setup.py
r/: Makefile  lint.sh
r/inst/: build_arrow_static.sh
r/tools/: download_dependencies_R.sh
ruby/: Rakefile
ruby/red-arrow/: Rakefile
ruby/red-arrow-cuda/: Rakefile
ruby/red-arrow-dataset/: Rakefile
ruby/red-arrow-flight/: Rakefile
ruby/red-arrow-flight-sql/: Rakefile
ruby/red-gandiva/: Rakefile
ruby/red-parquet/: Rakefile
swift/: gen-flatbuffers.sh
